--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": ".",
-    "token": "NTg1ODc0MzM3NjE4NDYwNjcy.XPpXvg.i83FFvyGIQ_Fl19liQg4UXQHa2M",
+    "token": "[bot token]",
     "emojis": {
         "a": "🇦",
         "b": "🇧",
