--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.5.1",
-    "ffmpeg-binaries": "^4.0.0"
+    "discord.js": "^11.5.1"
   }
 }
