--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
     "ffmpeg-binaries": "^4.0.0",
-    "google-images": "^2.1.0"
+    "google-images": "^2.1.0",
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.29.2"
   }
 }
