--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ffmpeg-binaries": "^4.0.0",
     "google-images": "^2.1.0",
     "opusscript": "0.0.6",
+    "youtube-search": "^1.1.4",
     "ytdl-core": "^0.29.2"
   }
 }
