--- a/package.json
+++ b/package.json
@@ -5,20 +5,18 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node .",
-    "lint": "eslint"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "Kira",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2",
+    "@discordjs/uws": "^10.149.0",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
-    "ffmpeg-binaries": "^4.0.0",
-    "google-images": "^2.1.0",
     "opusscript": "0.0.6",
     "superagent": "^5.1.0",
+    "uws": "^100.0.1",
     "youtube-search": "^1.1.4",
     "ytdl-core": "^0.29.2"
   }
