--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "Kira",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/uws": "^10.149.0",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
+    "ffmpeg-binaries": "^4.0.0",
     "opusscript": "0.0.6",
+    "random-puppy": "^1.1.0",
     "superagent": "^5.1.0",
-    "uws": "^100.0.1",
     "youtube-search": "^1.1.4",
     "ytdl-core": "^0.29.2"
   }
