--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
-    "ffmpeg-binaries": "^4.0.0",
     "opusscript": "0.0.6",
     "random-puppy": "^1.1.0",
+    "snekfetch": "^4.0.4",
     "superagent": "^5.1.0",
     "youtube-search": "^1.1.4",
     "ytdl-core": "^0.29.2"
