--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "common-tags": "^1.8.0",
-    "discord.js": "^11.0.0",
+    "discord.js": "^11.5.1",
+    "node-opus": "^0.2.1",
     "random-puppy": "^1.1.0",
     "snekfetch": "^4.0.4",
     "superagent": "^5.1.0",
     "youtube-search": "^1.1.4",
-    "ytdl-core": "github:fent/node-ytdl-core#master",
-    "node-opus": "^0.2.1"
+    "ytdl-core": "github:fent/node-ytdl-core#master"
   }
 }
