--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node ."
   },
   "keywords": [],
   "author": "Kira",
@@ -14,11 +14,11 @@
     "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
-    "node-opus": "^0.2.1",
+    "node-opus": "^0.3.2",
     "random-puppy": "^1.1.0",
     "snekfetch": "^4.0.4",
     "superagent": "^5.1.0",
     "youtube-search": "^1.1.4",
-    "ytdl-core": "github:fent/node-ytdl-core#master"
+    "ytdl-core": "^0.29.2"
   }
 }
