--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "Kira",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
+    "ffmpeg-binaries": "^4.0.0",
     "node-opus": "^0.3.2",
+    "opusscript": "0.0.6",
     "random-puppy": "^1.1.0",
     "snekfetch": "^4.0.4",
     "superagent": "^5.1.0",
