--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "Kira",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
-    "node-opus": "^0.3.2",
+    "node-fetch": "^2.6.0",
+    "opusscript": "0.0.6",
     "random-puppy": "^1.1.0",
-    "snekfetch": "^4.0.4",
     "superagent": "^5.1.0",
     "youtube-search": "^1.1.4",
-    "ytdl-core": "^0.29.2"
+    "ytdl-core-discord": "^1.0.3"
   }
 }
