--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "random-puppy": "^1.1.0",
     "superagent": "^5.1.0",
     "youtube-search": "^1.1.4",
-    "ytdl-core-discord": "^1.0.3"
+    "ytdl-core": "^0.29.2"
   }
 }
