--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
+    "ffmpeg-binaries": "^4.0.0",
     "node-fetch": "^2.6.0",
     "node-opus": "0.3.2",
+    "opusscript": "0.0.6",
     "random-puppy": "^1.1.0",
     "superagent": "^5.1.0",
     "youtube-search": "^1.1.4",
