--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 #config
 config.json
 
+#music wip
+commands/music/*
+
 # Logs
 logs
 *.log
@@ -81,3 +84,5 @@ config.json
 ecosystem.config.js
 .vscode/sftp.json
 .github/.whitesource
+commands/music/play.js
+commands/music/stop.js
