--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2",
-    "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
     "ffmpeg-binaries": "^4.0.0",
     "node-fetch": "^2.6.0",
     "opusscript": "0.0.6",
-    "youtube-search": "^1.1.4",
+    "youtube-api": "^2.0.10",
     "ytdl-core": "^0.29.2",
     "ytdl-core-discord": "^1.0.3"
   }
