--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,12 @@ typings/
 
 # FuseBox cache
 .fusebox/
+
+# my files
 ecosystem.config.js
 .vscode/sftp.json
 .github/.whitesource
 .vscode/launch.json
+
+# dev classes
+commands/proto.js
