--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ffmpeg-static": "^2.5.0",
     "node-fetch": "^2.6.0",
     "opusscript": "^0.0.6",
-    "youtube-api": "^2.0.10",
+    "youtube-node": "^1.3.3",
     "ytdl-core": "^0.29.2"
   }
 }
