--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ffmpeg-static": "^2.5.0",
     "node-fetch": "^2.6.0",
     "opusscript": "^0.0.6",
+    "sequelize": "^5.10.1",
+    "sqlite3": "^4.0.9",
     "youtube-node": "^1.3.3",
     "ytdl-core": "^0.29.2"
   }
