--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "ffmpeg-static": "^2.5.0",
+    "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "opusscript": "^0.0.6",
     "sequelize": "^5.10.1",
