--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "author": "Kira",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2",
     "discord.js": "^11.5.1",
     "ffmpeg-static": "^2.5.0",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
-    "opusscript": "^0.0.6",
+    "node-opus": "^0.2.7",
     "sequelize": "^5.10.1",
     "sqlite3": "^4.0.9",
     "youtube-node": "^1.3.3",
