--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "node-opus": "^0.3.2",
+    "random-puppy": "^1.1.0",
     "sequelize": "^5.10.1",
     "sqlite3": "^4.0.9",
     "youtube-node": "^1.3.3",
