--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "Kira",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/uws": "^11.149.1",
     "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
+    "erlpack": "github:discordapp/erlpack",
+    "eslint": "^6.1.0",
     "ffmpeg-static": "^2.5.0",
+    "libsodium-wrappers": "^0.7.5",
     "ms": "^2.1.2",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
@@ -22,6 +26,7 @@
     "sequelize": "^5.10.1",
     "sqlite3": "^4.0.9",
     "youtube-node": "^1.3.3",
-    "ytdl-core": "^0.29.2"
+    "ytdl-core": "^0.29.2",
+    "zucc": "^0.1.2"
   }
 }
