--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "sequelize": "^5.10.1",
     "sqlite3": "^4.0.9",
     "youtube-node": "^1.3.3",
-    "ytdl-core": "^0.29.2",
-    "zucc": "^0.1.2"
+    "ytdl-core": "^0.29.2"
   }
 }
