--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
-    "erlpack": "github:discordapp/erlpack",
     "eslint": "^6.1.0",
     "ffmpeg-static": "^2.5.0",
     "libsodium-wrappers": "^0.7.5",
@@ -24,8 +23,8 @@
     "node-fetch": "^2.6.0",
     "node-opus": "^0.3.2",
     "sequelize": "^5.10.1",
-    "sqlite3": "^4.0.9",
     "youtube-node": "^1.3.3",
-    "ytdl-core": "^0.29.2"
+    "ytdl-core": "^0.29.2",
+    "zucc": "^0.1.2"
   }
 }
