--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node ."
   },
   "keywords": [],
   "author": "Kira",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/uws": "^11.149.1",
     "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
