--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^2.6.0",
     "node-opus": "^0.3.2",
     "sequelize": "^5.10.1",
+    "unirest": "^0.6.0",
     "winston": "^3.2.0",
     "youtube-node": "^1.3.3",
     "ytdl-core": "^0.29.2"
