--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "node-opus": "^0.3.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "sequelize": "^5.10.1",
     "unirest": "^0.6.0",
     "winston": "^3.2.0",
