--- a/package.json
+++ b/package.json
@@ -11,21 +11,19 @@
   "author": "Kira",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/uws": "^11.149.1",
     "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
-    "eslint": "^6.1.0",
     "ffmpeg-static": "^2.5.0",
-    "libsodium-wrappers": "^0.7.5",
     "ms": "^2.1.2",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "node-opus": "^0.3.2",
+    "pretty-ms": "^5.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "sequelize": "^5.10.1",
     "youtube-node": "^1.3.3",
-    "ytdl-core": "^0.29.2"
+    "ytdl-core": "^0.29.4"
   }
 }
