--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mikaela",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Discord bot",
   "main": "app.js",
   "scripts": {
@@ -21,7 +21,8 @@
     "node-opus": "^0.3.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "sequelize": "^5.10.1",
+    "sequelize": "^5.12.2",
+    "sqlite3": "^4.0.9",
     "youtube-node": "^1.3.3",
     "ytdl-core": "^0.29.4"
   }
