--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "mikaela",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "Discord bot",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "Kira",
