--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "db": "node dist/db/dbSetup.js"
   },
   "dependencies": {
+    "bufferutil": "^4.0.0",
     "chalk": "^2.4.2",
     "discord.js": "^11.5.1",
+    "libsodium-wrappers": "^0.7.3",
     "mongoose": "^5.6.9",
     "ms": "^2.1.2",
     "node-opus": "^0.2.7",
