--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "db": "node dist/db/dbSetup.js"
   },
   "dependencies": {
+    "@discordjs/uws": "^10.149.0",
     "bufferutil": "^4.0.0",
     "chalk": "^2.4.2",
     "discord.js": "^11.5.1",
+    "erlpack": "github:discordapp/erlpack",
     "libsodium-wrappers": "^0.7.3",
     "mongoose": "^5.6.9",
     "ms": "^2.1.2",
