WIP Reworking music player
This reverts commit f70831ad33cd57157dea683fdad3cd16ec814ab0.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "mikaela",
-  "version": "2.0.0",
+  "name": "mikaela-rewrite",
+  "version": "1.1.0",
   "main": "./dist/main.js",
   "scripts": {
-    "start": "node .",
-    "test": "node . -dev"
+    "start": "node ."
   },
   "license": "MIT",
   "dependencies": {
@@ -16,9 +15,10 @@
     "libsodium-wrappers": "^0.7.3",
     "mongoose": "^5.6.9",
     "ms": "^2.1.2",
-    "node-opus": "^0.3.2",
+    "node-opus": "^0.2.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "winston": "^3.2.1",
     "ytdl-core": "^0.29.5"
   },
   "devDependencies": {
