--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
   "name": "mikaela",
-  "version": "1.0.0",
-  "main": "./dist/main.js",
+  "version": "3.0.0",
+  "main": "out/main.js",
   "scripts": {
-    "start": "node .",
-    "test": "node . -dev",
-    "postinstall": "Mikaela finished installing :3"
+    "start": "node ."
   },
-  "engines": {
-    "node": "11.15.0"
-  },
+  "author": "kira",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/uws": "^10.149.0",
-    "bufferutil": "^4.0.0",
     "discord.js": "^11.5.1",
-    "mongoose": "^5.6.9",
+    "mongoose": "^5.6.11",
     "ms": "^2.1.2",
-    "node-opus": "^0.2.7",
+    "node-opus": "^0.3.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "ytdl-core": "^0.29.5"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.5.12",
-    "@types/node": "^12.7.2",
-    "@types/request-promise": "^4.1.44"
+    "@types/mongoose": "^5.5.16",
+    "@types/node": "^12.7.3"
   }
 }
