--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-node_modules/
-dist/
-**/config.*
-**/config.json
-src/config.ts
+# node_modules/
+# # dist/
+# # **/config.*
+# **/config.json
+# src/config.ts
+# *.log
+# ecosystem.config.js
+# out/
+
+
 *.log
 ecosystem.config.js
-out/
+src/
+node_modules
