--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "node ."
   },
   "dependencies": {
+    "bufferutil": "^4.0.1",
     "chalk": "^2.4.2",
     "discord.js": "^11.5.1",
+    "erlpack": "hammerandchisel/erlpack",
+    "libsodium-wrappers": "^0.7.6",
     "mongoose": "^5.7.8",
     "ms": "^2.1.2",
     "node-opus": "^0.3.3",
