--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
       "start": "node ."
    },
    "dependencies": {
+      "@discordjs/uws": "^10.149.0",
       "chalk": "^2.4.2",
+      "discord-ytdl-core": "^1.0.2",
       "discord.js": "^11.5.1",
       "mongoose": "^5.7.8",
       "ms": "^2.1.2",
       "node-opus": "^0.3.3",
       "request": "^2.88.2",
-      "request-promise": "^4.2.5",
-      "ytdl-core": "^2.0.1"
+      "request-promise": "^4.2.5"
    },
    "devDependencies": {
       "@types/mongoose": "^5.5.29",
