--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
-  "printWidth": 135,
-  "tabWidth": 3,
-  "singleQuote": true,
-  "arrowParens": "avoid"
+    "printWidth": 130,
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": true,
+    "arrowParens": "avoid"
 }
