--- a/package.json
+++ b/package.json
@@ -1,44 +1,57 @@
 {
-  "name": "mikaela",
-  "version": "4.0.0",
-  "description": "Mikaela is DiscordBot who can help make your server a more vibrant place to be in, she plays music, saves members favorites, those who like to debate can even organize their notes and sources with her help.",
-  "main": "out/app.js",
-  "license": "MIT",
-  "private": true,
-  "keywords": [
-    "discord",
-    "music",
-    "debate",
-    "typescript",
-    "bot"
-  ],
-  "homepage": "https://github.com/lil-kira/MikaelaBot#readme",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lil-kira/MikaelaBot/"
-  },
-  "bugs": {
-    "url": "https://github.com/lil-kira/MikaelaBot/issues",
-    "email": "lil.kira@outlook.com"
-  },
-  "scripts": {
-    "start": "node ."
-  },
-  "dependencies": {
-    "@discordjs/uws": "^10.149.0",
-    "chalk": "^2.4.2",
-    "discord.js": "^11.5.1",
-    "mongoose": "^5.7.8",
-    "ms": "^2.1.2",
-    "node-opus": "^0.3.3",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "ytdl-core-discord": "^1.2.0"
-  },
-  "devDependencies": {
-    "@types/mongoose": "^5.5.29",
-    "@types/ms": "^0.7.31",
-    "@types/node": "^12.12.6",
-    "@types/request-promise": "^4.1.44"
-  }
+    "name": "mikaela",
+    "version": "4.0.0",
+    "description": "Mikaela is DiscordBot who can help make your server a more vibrant place to be in, she plays music, saves members favorites, those who like to debate can even organize their notes and sources with her help.",
+    "main": "out/app.js",
+    "license": "MIT",
+    "private": true,
+    "author": {
+        "name": "Kira",
+        "email": "lil.kira@outlook.com"
+    },
+    "keywords": [
+        "discord",
+        "music",
+        "debate",
+        "typescript",
+        "bot"
+    ],
+    "homepage": "https://github.com/lil-kira/MikaelaBot#readme",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/lil-kira/MikaelaBot/"
+    },
+    "bugs": {
+        "url": "https://github.com/lil-kira/MikaelaBot/issues",
+        "email": "lil.kira@outlook.com"
+    },
+    "scripts": {
+        "start": "node .",
+        "pretty": "prettier --write \"./**/*.{ts,json}\""
+    },
+    "dependencies": {
+        "@discordjs/opus": "^0.1.0",
+        "chalk": "^4.0.0",
+        "discord.js": "^12.2.0",
+        "ffmpeg-static": "^4.1.1",
+        "mongoose": "^5.9.10",
+        "ms": "^2.1.2",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.5",
+        "sodium": "^3.0.2",
+        "tslib": "^1.11.1",
+        "ytdl-core-discord": "^1.2.0"
+    },
+    "devDependencies": {
+        "@types/mongoose": "^5.7.12",
+        "@types/ms": "^0.7.31",
+        "@types/node": "^13.13.1",
+        "@types/request-promise": "^4.1.46",
+        "prettier": "^2.0.4"
+    },
+    "nodemonConfig": {
+        "events": {
+            "start": "cls || clear"
+        }
+    }
 }
