--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "ms": "^2.1.2",
         "request": "^2.88.2",
         "request-promise": "^4.2.5",
+        "sodium": "^3.0.2",
         "tslib": "^2.0.0",
         "ytdl-core-discord": "^1.2.1"
     },
