--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-    "printWidth": 120,
-    "tabWidth": 3,
+    "printWidth": 110,
+    "tabWidth": 4,
     "semi": true,
+    "useTabs": false,
     "singleQuote": true,
     "arrowParens": "avoid"
 }
