--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
         "request-promise": "^4.2.6",
         "sodium": "^3.0.2",
         "tslib": "^2.0.2",
-        "ytdl-core-discord": "^1.2.3"
+        "ytdl-core-discord": "^1.2.3",
+        "ytsr": "^1.0.4"
     },
     "devDependencies": {
         "@types/mongoose": "^5.7.36",
         "@types/ms": "^0.7.31",
-        "@types/node": "^14.11.5",
+        "@types/node": "^14.11.8",
         "@types/request-promise": "^4.1.46",
         "prettier": "^2.1.2"
     },
