--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,13 @@
         // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
         // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
         // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
-        // "sourceMap": true /* Generates corresponding '.map' file. */,
+        "sourceMap": true /* Generates corresponding '.map' file. */,
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
         "outDir": "./out" /* Redirect output structure to the directory. */,
         "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
         // "composite": true, /* Enable project compilation */
         // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
-        // "removeComments": true, /* Do not emit comments to output. */
+        "removeComments": false, /* Do not emit comments to output. */
         // "noEmit": true,                        /* Do not emit outputs. */
         // "importHelpers": true /* Import emit helpers from 'tslib'. */,
         // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
@@ -31,7 +31,7 @@
         "noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type. */,
         "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
         /* Additional Checks */
-        // "noUnusedLocals": true, /* Report errors on unused locals. */
+        "noUnusedLocals": true, /* Report errors on unused locals. */
         // "noUnusedParameters": true, /* Report errors on unused parameters. */
         // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
         // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
