--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/kira0x1/mikaela/issues"
   },
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "node .",
     "start-prod": "node . --env=production",
     "pretty": "prettier --write \"./**/*.{ts,json}\""
   },
@@ -37,7 +37,6 @@
     "minimist": "^1.2.5",
     "mongoose": "^5.10.9",
     "ms": "^2.1.2",
-    "pm2": "^4.5.0",
     "sodium": "^3.0.2",
     "tslib": "^2.0.3",
     "ytdl-core-discord": "^1.2.3",
