--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "pm2": "^4.5.0",
     "sodium": "^3.0.2",
     "tslib": "^2.0.3",
-    "ytdl-core-discord": "https://github.com/kira0x1/ytdl-core-discord#dependabot/npm_and_yarn/ytdl-core-3.4.1",
-    "ytsr": "^1.0.4"
+    "youtube-sr": "^1.0.4",
+    "ytdl-core-discord": "https://github.com/kira0x1/ytdl-core-discord#dependabot/npm_and_yarn/ytdl-core-3.4.1"
   },
   "devDependencies": {
     "@types/mongoose": "^5.7.36",
