--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "sodium": "^3.0.2",
     "tslib": "^2.0.3",
     "youtube-sr": "^1.0.4",
-    "ytdl-core-discord": "https://github.com/kira0x1/ytdl-core-discord#dependabot/npm_and_yarn/ytdl-core-3.4.1"
+    "ytdl-core-discord": "https://github.com/kira0x1/ytdl-core-discord"
   },
   "devDependencies": {
     "@types/mongoose": "^5.7.36",
