--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "sodium": "^3.0.2",
     "tslib": "^2.0.3",
     "youtube-sr": "^1.0.4",
-    "ytdl-core-discord": "https://github.com/kira0x1/ytdl-core-discord"
+    "ytdl-core-discord": "^1.2.4",
+    "ytpl": "^1.0.1"
   },
   "devDependencies": {
     "@types/mongoose": "^5.7.36",
     "@types/ms": "^0.7.31",
-    "@types/node": "^14.14.2",
+    "@types/node": "^14.14.3",
     "prettier": "^2.1.2"
   },
   "nodemonConfig": {
