--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,9 @@
 {
-    "printWidth": 110,
-    "tabWidth": 4,
+    "printWidth": 90,
+    "tabWidth": 3,
     "semi": true,
     "useTabs": false,
     "singleQuote": true,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "trailingComma": "none"
 }
