--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
+    "bufferutil": "^4.0.2",
     "chalk": "^4.1.0",
     "discord-ytdl-core": "^4.1.5",
     "discord.js": "^12.4.1",
@@ -42,6 +43,8 @@
     "pm2": "^4.5.0",
     "sodium": "^3.0.2",
     "tslib": "^2.0.3",
+    "utf-8-validate": "^5.0.3",
+    "ws": "^7.4.0",
     "youtube-sr": "^1.0.7",
     "ytpl": "^1.0.1"
   },
