--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@discordjs/opus": "^0.3.3",
     "bufferutil": "^4.0.2",
     "chalk": "^4.1.0",
-    "discord-ytdl-core": "^4.1.5",
-    "discord.js": "^12.4.1",
+    "discord-ytdl-core": "^5.0.0",
+    "discord.js": "^12.5.0",
     "ffmpeg-static": "^4.2.7",
     "minimist": "^1.2.5",
     "mongoose": "^5.10.15",
@@ -46,13 +46,14 @@
     "utf-8-validate": "^5.0.3",
     "ws": "^7.4.0",
     "youtube-sr": "^2.0.1",
+    "ytdl-core": "^4.0.6",
     "ytpl": "^1.0.1"
   },
   "devDependencies": {
     "@types/mongoose": "^5.10.1",
     "@types/ms": "^0.7.31",
     "@types/node": "^14.14.9",
-    "prettier": "^2.1.2"
+    "prettier": "^2.2.0"
   },
   "nodemonConfig": {
     "events": {
