--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "utf-8-validate": "^5.0.3",
     "ws": "^7.4.0",
     "youtube-sr": "^2.0.4",
+    "ytdl-core": "^4.0.3",
     "ytdl-core-discord": "^1.2.4",
     "ytpl": "^1.0.1"
   },
