--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@discordjs/opus": "^0.3.3",
     "bufferutil": "^4.0.2",
     "chalk": "^4.1.0",
+    "discord-ytdl-core": "^5.0.0",
     "discord.js": "^12.5.1",
     "ffmpeg-static": "^4.2.7",
     "minimist": "^1.2.5",
@@ -45,8 +46,7 @@
     "utf-8-validate": "^5.0.3",
     "ws": "^7.4.0",
     "youtube-sr": "^2.0.4",
-    "ytdl-core": "^4.0.3",
-    "ytdl-core-discord": "^1.2.4",
+    "ytdl-core": "^4.1.0",
     "ytpl": "^1.0.1"
   },
   "devDependencies": {
