--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/kira0x1/mikaela/issues"
   },
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "node . --prefix=,",
     "start-prod": "node . --env=production",
     "watch": "tsc --watch --noEmit --project tsconfig.json",
     "pretty": "prettier --write \"./**/*.{ts,json}\""
@@ -38,7 +38,7 @@
     "discord.js": "^12.5.1",
     "ffmpeg-static": "^4.2.7",
     "minimist": "^1.2.5",
-    "mongoose": "^5.10.18",
+    "mongoose": "^5.11.1",
     "ms": "^2.1.2",
     "pm2": "^4.5.0",
     "sodium": "^3.0.2",
@@ -50,7 +50,6 @@
     "ytpl": "^1.0.1"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.10.1",
     "@types/ms": "^0.7.31",
     "@types/node": "^14.14.10",
     "prettier": "^2.2.1"
