--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mongoose": "^5.12.2",
     "ms": "^2.1.3",
     "sodium": "^3.0.2",
+    "string-progressbar": "^1.0.3",
     "tslib": "^2.1.0",
     "utf-8-validate": "^5.0.4",
     "winston": "^3.3.3",
