--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "discord-ytdl-core": "^5.0.2",
     "discord.js": "^12.5.3",
     "ffmpeg-static": "^4.3.0",
+    "libsodium-wrappers": "^0.7.9",
     "minimist": "^1.2.5",
     "mongoose": "^5.12.3",
     "ms": "^2.1.3",
-    "sodium": "^3.0.2",
     "string-progressbar": "^1.0.3",
     "tslib": "^2.2.0",
     "utf-8-validate": "^5.0.4",
