--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   "devDependencies": {
     "@types/ms": "^0.7.31",
     "@types/node": "^14.14.37",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.2.4"
   },
   "nodemonConfig": {
     "events": {
