--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
+    "@yarnpkg/pnpify": "^3.0.0-rc.3",
     "bufferutil": "^4.0.3",
     "chalk": "^4.1.1",
     "discord-paginationembed": "^2.1.0",
