Fixed queue not displaying playedFrom details

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,10 @@
 {
-   "printWidth": 110,
+   "printWidth": 105,
    "tabWidth": 3,
    "semi": true,
    "useTabs": false,
    "singleQuote": true,
    "arrowParens": "avoid",
    "trailingComma": "none",
-   "quoteProps": "as-needed"
+   "bracketSpacing": true
 }
