--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
       "mongoose": "^5.12.7",
       "ms": "^2.1.3",
       "sodium": "^3.0.2",
+      "spotify-uri": "^2.2.0",
+      "spotify-url-info": "^2.2.0",
       "string-progressbar": "^1.0.4",
       "tslib": "^2.2.0",
       "utf-8-validate": "^5.0.5",
