--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "clean:node": "rimraf 'node_modules/!(rimraf|.bin)'",
       "clean:all": "npm run clean && npm run clean:node",
       "prettier": "prettier --write **.ts",
-      "lint": "eslint . --ext .js,.ts"
+      "lint": "eslint . --ext .ts"
    },
    "dependencies": {
       "@discordjs/opus": "^0.5.0",
