Change endofline to lf

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
    "singleQuote": true,
    "arrowParens": "avoid",
    "trailingComma": "none",
-   "bracketSpacing": true
+   "bracketSpacing": true,
+   "endOfLine": "lf"
 }
