set endofline to auto

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,5 @@
    "arrowParens": "avoid",
    "trailingComma": "none",
    "bracketSpacing": true,
-   "endOfLine": "lf"
+   "endOfLine": "auto"
 }
