--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
       "winston": "^3.3.3",
       "ws": "^8.2.2",
       "youtube-sr": "^4.1.7",
-      "ytdl-core": "^4.9.1",
-      "ytpl": "^2.2.3"
+      "ytdl-core": "^4.9.1"
    },
    "devDependencies": {
       "@types/ms": "^0.7.31",
