--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,12 @@ PROD_DB=
 
 # DEV MONGODB URI
 DEV_DB=
+
+# YOUR DISCORDID
+OWNER_ID=
+
+# YOUR SERVER ID ( if you want this bot to do rolemanagment for you )
+OWNER_SERVER_ID=
+
+# The bots discord id, this is helpful when u have 2 instances of the bot and only want one instance to do certain things such as set roles
+BOT_ID=
