Add config file

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
       "discord-paginationembed": "^2.1.0",
       "discord-ytdl-core": "^5.0.4",
       "discord.js": "^12.5.3",
+      "dotenv": "^10.0.0",
       "minimist": "^1.2.5",
       "mongoose": "^6.0.10",
       "ms": "^2.1.3",
