--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # DEFAULT PREFIX TO USE IN PROD
-PRODUCTION_PREFIX=.
+PROD_PREFIX=.
 
 # DEFAULT PREFIX TO USE IN DEV
-DEVELOPMENT_PREFIX=$
+DEV_PREFIX=$
 
 # Token to use when not in production
 DEV_TOKEN=
