send logs to elastic search
- removed chalk

--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
       "@discordjs/voice": "^0.7.2",
       "axios": "^0.24.0",
       "bufferutil": "^4.0.5",
-      "chalk": "^4.1.2",
       "discord.js": "^13.3.1",
       "dotenv": "^10.0.0",
       "ffmpeg-static": "^4.4.0",
@@ -60,6 +59,7 @@
       "tslib": "^2.3.1",
       "utf-8-validate": "^5.0.7",
       "winston": "^3.3.3",
+      "winston-elasticsearch": "^0.15.9",
       "ws": "^8.2.3",
       "yt-search": "^2.10.2",
       "ytdl-core": "^4.9.1",
