--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,7 @@ OWNER_ID=
 # YOUR SERVER ID ( if you want this bot to do rolemanagment for you )
 OWNER_SERVER_ID=
 
-# The bots discord id, this is helpful when u have 2 instances of the bot and only want one instance to do certain things such as set roles
-BOT_ID=
+# Elastic search settings to store logs
+ELASTIC_SERVER=
+ELASTIC_USERNAME=
+ELASTIC_PASSWORD=
