Add agenda to dependencies

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
    "dependencies": {
       "@discordjs/opus": "^0.7.0",
       "@discordjs/voice": "^0.7.5",
+      "agenda": "^4.2.1",
       "bufferutil": "^4.0.5",
       "discord.js": "^13.3.1",
       "dotenv": "^10.0.0",
